@@ -1671,6 +1671,8 @@ SEXP do_isna(SEXP call, SEXP op, SEXP args, SEXP rho)
         case CPLXSXP:                                                                                                  \
             LOGICAL(ans)[i] = (ISNAN(COMPLEX(s)[0].r) || ISNAN(COMPLEX(s)[0].i));                                      \
             break;                                                                                                     \
+        default:                                                                                                       \
+            LOGICAL(ans)[i] = 0;                                                                                       \
         }                                                                                                              \
     }
 
